customtests/tests/expected/exprcopydef1.err
tests/exprcopydef1.scala:20: error: mutability mismatch:
 found   : => AnyRef @readonly(exprcopydef1.this.ue4)
 required: AnyRef(exprcopydef1.this.u1)
	u1 = ue4  // should error
             ^
one error found
